plugins {
    id 'java'
    id 'groovy'
    id 'java-gradle-plugin'
    id "com.gradle.plugin-publish" version "1.0.0-rc-1"
    id 'maven-publish'
    id "com.github.johnrengelman.shadow" version "7.1.2"
}

ext {
    publishingPath = version.toString().contains("SNAPSHOT") ? 'snapshots' : 'internal'
    pluginDescription = 'The plugin that allows you access to java keytool commands in gradle as task'
}

sourceCompatibility = 1.11

configurations {
    plugin
    implementation.extendsFrom(plugin)
}

shadowJar {
    configurations = [project.configurations.plugin]
    archiveClassifier.set("")
    relocate 'xyz.ronella.trivial', "${project.group}.shadow.trivial"
    relocate 'xyz.ronella.command.arrays', "${project.group}.shadow.command.arrays"
}

pluginBundle {
    website = 'https://github.com/rcw3bb/simple-keytool'
    vcsUrl = 'https://github.com/rcw3bb/simple-keytool'
    description = pluginDescription
    tags = ['ronella', 'simple-keytool', 'simple', 'keytool', 'java', 'cacert', 'automation',
            'certificate management', 'management', 'security']
}

gradlePlugin {
    plugins {
        templateGradlePlugin {
            id = 'xyz.ronella.simple-keytool'
            displayName = 'Simple Keytool Plugin'
            description = pluginDescription
            implementationClass = 'xyz.ronella.gradle.plugin.simple.keytool.SimpleKeytoolPlugin'
        }
    }
}

publishing {
    publications {
        repositories.maven {
            url "https://repo.ronella.xyz/archiva/repository/${publishingPath}/"
            credentials {
                username "${archivaUsername}"
                password "${archivaPassword}"
            }
        }
    }
}

repositories {
    if (Boolean.valueOf(USE_PRIVATE_REPO)) {
        println "Using Private Repository"

        maven {
            url 'https://repo.ronella.xyz/artifactory/java-central'
            credentials {
                username "${artifactoryUsername}"
                password "${artifactoryPassword}"
            }
            mavenContent {
                releasesOnly()
            }
        }
        mavenLocal {
            mavenContent {
                snapshotsOnly()
            }
        }
    }
    else {
        println "Using mavenCentral Repository"
        mavenCentral()
    }
}

dependencies {
    plugin 'xyz.ronella.casual:trivial-chunk:2.10.0-SNAPSHOT'
    plugin 'xyz.ronella.casual:command-arrays:1.0.0-SNAPSHOT'

    implementation gradleApi()
    implementation localGroovy()

    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'

    testImplementation 'org.mockito:mockito-core:4.4.0'
    testImplementation 'org.mockito:mockito-inline:4.4.0'
}

jar.enabled = false
jar.dependsOn shadowJar

test {
    useJUnitPlatform()
}
